Inner Circle alignment fix

--- a/src/pages/MyGoalsPage/MyGoalsPage.scss
+++ b/src/pages/MyGoalsPage/MyGoalsPage.scss
@@ -78,7 +78,7 @@
   width: 24px;
   height: 24px;
   margin-top: 2.7px;
-  margin-left: 2.2px;
+  margin-left: 2.7px;
   border-radius: 50%;
 }
 .goal-dd-outer {
